--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
             <artifactId>spring-data-commons</artifactId>
             <version>2.3.5.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>2.1.7.RELEASE</version>
+        </dependency>
 
 
     </dependencies>
